--- a/react/package.json
+++ b/react/package.json
@@ -1,30 +1,23 @@
 {
-  "name": "edu_verse_client",
+  "name": "eduverse-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.13.0",
-    "@emotion/styled": "^11.13.0",
-    "@fortawesome/free-brands-svg-icons": "^6.6.0",
-    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@mui/icons-material": "^5.16.6",
-    "@mui/material": "^5.16.6",
-    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.4",
     "react": "^18.3.1",
-    "react-awesome-slider": "^4.1.0",
-    "react-awesome-slider-new": "^4.1.1",
     "react-dom": "^18.3.1",
-    "react-feather": "^2.0.10",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "styled-components": "^6.1.12",
+    "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -52,6 +45,8 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.7"
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
